// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should render all steps as completed when activeStep is greater than the number of steps - 1 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--completed"
          title="Step 1 of 2 (completed)."
        >
          <svg />
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--completed"
        >
          Step 1
        </h2>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--completed"
          title="Step 2 of 2 (completed)."
        >
          <svg />
        </span>
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--completed"
        >
          Step 2
        </h2>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render all steps as upcoming when activeStep is negative 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--upcoming"
          title="Step 1 of 2 (upcoming)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--upcoming"
        >
          Step 1
        </h2>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--upcoming"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--upcoming"
        >
          Step 2
        </h2>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render all steps as upcoming when activeStep is not provided 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--upcoming"
          title="Step 1 of 2 (upcoming)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--upcoming"
        >
          Step 1
        </h2>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--upcoming"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--upcoming"
        >
          Step 2
        </h2>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render the active step as active and display its content 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--active"
          title="Step 1 of 2 (active)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--active"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content"
        >
          This is step 1.
        </div>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--upcoming"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--upcoming"
        >
          Step 2
        </h2>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render the active step as active and display its content 2`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--completed"
          title="Step 1 of 2 (completed)."
        >
          <svg />
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--completed"
        >
          Step 1
        </h2>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number googlesitekit-stepper__step-number--active"
          title="Step 2 of 2 (active)."
        >
          2
        </span>
      </div>
      <div>
        <h2
          class="googlesitekit-stepper__step-title googlesitekit-stepper__step-title--active"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content"
        >
          This is step 2.
        </div>
      </div>
    </li>
  </ol>
</div>
`;
